# diy-ic

./: .gitignore  README.md
dotfiles/: xschemrc
dotfiles/.klayout/: klayoutrc
gmid/: hv_nmos.sch  hv_pmos.sch  lv_nmos.sch  lv_pmos.sch
python/: design.ipynb  pyproject.toml  tools.ipynb
python/pyIC/: ic_utils.py  utils.py  xschem_utils.py
schematic/: aux_amp.sch  aux_amp.sym  folded_cascode.sch  folded_cascode.sym  two_stage.sch  two_stage.sym
testbench/: aux_amp_tb.sch  folded_cascode_tb.sch  two_stage_tb.sch
testbench/simulations/: folded_cascode_tb.save  folded_cascode_tb.spice  two_stage_tb.save  two_stage_tb.spice
testbench/two_stage/: two_stage_tb.sch
