[project]
name = "ic-python"
version = "0.1.0"
description = ""
authors = [
    {name = "andreasp",email = "dev@andreaspedersen.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "jupyterlab (>=4.4.5,<5.0.0)",
    "sympy (>=1.14.0,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "typer (>=0.16.0,<0.17.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
